--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
 * { margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;}
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 18px;
+}
 
 body {
     background-color: #E5E5E5;
@@ -52,6 +56,10 @@ select {
     cursor: pointer;
     padding-left: 16px;
     margin-bottom: 24px;
+    outline: none;
+    appearance: none;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
+
 }
 input {
     background: #FFFFFF;
@@ -62,4 +70,63 @@ input {
     cursor: pointer;
     padding-left: 16px;
     margin-bottom: 24px;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
+    outline: none;
+    font-size: 18px;
 }
+button {
+    background-color: #1883E5;
+    border: none;
+    border-radius: 25px;
+    height: 48px;
+    width: 100%;
+    cursor: pointer;
+    color: #FFFFFF;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: 24px;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
+    outline: none;
+    margin-top: 24px;
+}
+
+button:hover {
+    opacity: 0.9;
+}
+button:active {
+    opacity: 0.7;
+}
+
+section {
+    border: 1px solid #1883E5;
+    border-radius: 4px;
+}
+.currency-container  {
+    
+    
+    text-align:  center;
+    padding: 10px;
+}
+
+.currency-name {
+    line-height: 19px;
+    color: #777777;
+    margin-top: 8px;
+}
+.currency-value {
+    
+    color: #1883E5;
+    font-size: 20px;
+    font-weight: bold;
+
+} 
+
+.arrow-img {
+    margin: 0 auto;
+    display: block;
+    margin: 15px auto;
+    
+}
+
